--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express": "^4.17.1",
     "express-validator": "^6.9.2",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.11.13",
     "morgan": "^1.10.0",
     "morgan-body": "^2.6.4",
     "passport": "^0.4.1",
